feat(COM): Implement base service class